@@ -158,6 +158,7 @@ void OptionsMenu::read_settings() {
     ui->cb_check_for_updates_on_startup->setChecked(s->value("check_for_updates_on_startup", true).toBool());
     ui->cb_alert_on_lost_connection->setChecked(s->value("alert_on_lost_connection", true).toBool());
     ui->cb_labor_cheats->setChecked(s->value("allow_labor_cheats", false).toBool());
+    ui->cb_hide_children->setChecked(s->value("hide_children_and_babies", false).toBool());
     s->endGroup();
 
     m_reading_settings = false;
@@ -196,6 +197,7 @@ void OptionsMenu::write_settings() {
         s->setValue("check_for_updates_on_startup", ui->cb_check_for_updates_on_startup->isChecked());
         s->setValue("alert_on_lost_connection", ui->cb_alert_on_lost_connection->isChecked());
         s->setValue("allow_labor_cheats", ui->cb_labor_cheats->isChecked());
+        s->setValue("hide_children_and_babies", ui->cb_hide_children->isChecked());
 
         s->endGroup();
     }
